--- a/server/src/main/resources/reference.conf
+++ b/server/src/main/resources/reference.conf
@@ -1,7 +1,11 @@
 id2203.project {
-	address.ip="127.0.0.1"
-	address.port=45678
-	bootThreshold=3
-	keepAlivePeriod=2000
-	epfd.delay = 40
+  address.ip = "127.0.0.1"
+  address.port = 45678
+  bootThreshold = 6
+  keepAlivePeriod = 2000
+  replicationDegree = 3
+  maxKey = 2147483647
+  minKey = -2147483648
+  ble.delay = 40
+  epfd.delay = 40
 }
