--- a/server/src/test/resources/reference.conf
+++ b/server/src/test/resources/reference.conf
@@ -1,4 +1,11 @@
 id2203.project {
 	bootThreshold=3
 	keepAlivePeriod=2000
+    bootThreshold = 6
+    keepAlivePeriod = 2000
+    replicationDegree = 3
+    maxKey = 2147483647
+    minKey = -2147483648
+    ble.delay = 40
+    epfd.delay = 40
 }
